--- a/index.html
+++ b/index.html
@@ -5,30 +5,50 @@ background: '/img/bg-index.jpg'
 ---
 
 
+<article class="container">
 
-우리 연구실은 데이터 마이닝, 기계 학습, 정보 검색 등의 기술을 활용하여 대규모 데이터를 효율적으로 처리하고 분석할 수 있는 확장 가능한 알고리즘을 연구 및 개발합니다. 특히, 그래프 마이닝, 추천시스템, 기계학습, 분산 병렬 알고리즘 등의 주제에 주력하고 있습니다. 
+    <h3>Our Vision</h3>
+    <div>
+        우리 연구실은 <b>데이터 마이닝, 기계 학습, 정보 검색</b> 등의 기술을 활용하여 대규모 데이터를 효율적으로 처리하고 분석할 수 있는 확장 가능한 알고리즘을 연구 및 개발합니다. 특히, 그래프 마이닝, 추천시스템, 기계학습, 분산 병렬 알고리즘 등의 주제에 주력하고 있습니다.
+    </div>
 
-그래프 마이닝
-대규모 그래프 데이터를 어떻게 효과적으로 분석할 수 있을까요? 우리 연구실은 그래프 데이터에서 중요한 패턴과 구조를 발견하고, 이를 효율적으로 처리하기 위한 알고리즘을 개발합니다.
-주요 논문
-> BTS: Load-Balanced Distributed Union-Find for Finding Connected Components with Balanced Tree Structures, ICDE, 2024 (최우수 국제 학회)
-> UniCon: A Unified Star-Operation to Efficiently Find Connected Components on a Cluster of Commodity Hardware, PLOS ONE, 2022
+    <h3>Research Interest</h3>
+    <div>
+      <h4>그래프 마이닝</h4>
+      대규모 그래프 데이터를 어떻게 효과적으로 분석할 수 있을까요? 우리 연구실은 그래프 데이터에서 중요한 패턴과 구조를 발견하고, 이를 효율적으로 처리하기 위한 알고리즘을 개발합니다.
+      <h5>주요 논문</h5>
+      <ul>
+        <li>BTS: Load-Balanced Distributed Union-Find for Finding Connected Components with Balanced Tree Structures, ICDE, 2024 (최우수 국제 학회)</li>
+        <li>UniCon: A Unified Star-Operation to Efficiently Find Connected Components on a Cluster of Commodity Hardware, PLOS ONE, 2022</li>
+      </ul>
+    </div>
 
-추천시스템
-어떻게 사용자에게 맞춤형 추천을 제공할 수 있을까요? 우리 연구실은 대규모 데이터에서 사용자 취향을 분석하고, 개인화된 추천을 제공하기 위한 알고리즘을 연구합니다.
-주요 논문
-> Efficient Proximity Search in Time-evolving High-dimensional Data using Multi-level Block Indexing, EDBT, 2024 (우수 국제 학회)
-> Latent Representation Generation for Efficient Content-Based Image Retrieval in Weather Satellite Images Using Self-Supervised Segmentation, BigComp, 2024
+    <div>
+      <h4>추천시스템</h4>
+      어떻게 사용자에게 맞춤형 추천을 제공할 수 있을까요? 우리 연구실은 대규모 데이터에서 사용자 취향을 분석하고, 개인화된 추천을 제공하기 위한 알고리즘을 연구합니다.
+      <h5>주요 논문</h5>
+      <ul>
+        <li>Efficient Proximity Search in Time-evolving High-dimensional Data using Multi-level Block Indexing, EDBT, 2024 (우수 국제 학회)</li>
+        <li>Latent Representation Generation for Efficient Content-Based Image Retrieval in Weather Satellite Images Using Self-Supervised Segmentation, BigComp, 2024</li>
+      </ul>
+    </div>
+  
+    <div>
+      <h4>기계 학습</h4>
+      복잡한 데이터를 어떻게 효율적으로 학습하고 표현할 수 있을까요? 우리 연구실은 대규모 데이터를 다루기 위한 모델 압축, 임베딩 기법과 그래프 신경망 등 데이터의 구조적 특성을 반영하는 방법을 탐구합니다.
+      <ul>
+        <li>Enhancing Heterophilic Graph Neural Network Performance through Label Propagation in K-Nearest Neighbor Graphs, BigComp, 2024</li>
+        <li>기상관측정보를 고려한 오토인코더 기반 멀티모달 기상위성영상 임베딩 기법 연구, KSC, 2022</li>
+      </ul>
+    </div>
+  
+    <div>
+      <h4>분산 병렬 알고리즘</h4>
+      대규모 데이터를 어떻게 빠르고 효율적으로 처리할 수 있을까요? 우리 연구실은 대규모 데이터를 분산 혹은 병렬 환경에서 효율적으로 처리할 수 있는 알고리즘을 설계합니다. 
+      <ul>
+        <li>Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest, KDD, 2023 (최우수 국제 학회)</li>
+        <li>PACC: Large Scale Connected Component Computation on Hadoop and Spark, PLOS ONE, 2020</li>
+      </ul>
+    </div>
 
-기계 학습
-복잡한 데이터를 어떻게 효율적으로 학습하고 표현할 수 있을까요? 우리 연구실은 대규모 데이터를 다루기 위한 모델 압축, 임베딩 기법과 그래프 신경망 등 데이터의 구조적 특성을 반영하는 방법을 탐구합니다.
-주요 논문
-> Enhancing Heterophilic Graph Neural Network Performance through Label Propagation in K-Nearest Neighbor Graphs, BigComp, 2024
-> 기상관측정보를 고려한 오토인코더 기반 멀티모달 기상위성영상 임베딩 기법 연구, KSC, 2022
-
-분산 병렬 알고리즘
-대규모 데이터를 어떻게 빠르고 효율적으로 처리할 수 있을까요? 우리 연구실은 대규모 데이터를 분산 혹은 병렬 환경에서 효율적으로 처리할 수 있는 알고리즘을 설계합니다. 
-주요 논문
-> Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest, KDD, 2023 (최우수 국제 학회)
-> PACC: Large Scale Connected Component Computation on Hadoop and Spark, PLOS ONE, 2020
-
+</article>
