--- a/publications.html
+++ b/publications.html
@@ -9,6 +9,20 @@ background: '/img/bg-contact.jpg'
     <div class="publication-title">International</div>
     <div class="publications-per-year">
         <div class="year-mark">
+            2025
+        </div>
+        <div class="publications">
+            <div class="publication">
+                <b>SkySearch: Satellite Video Search at Scale</b><br>
+                ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)<br>
+                Minyoung Choe, Geon Lee, Changhun Han, Suji Kim, Woong Hu, Hyebeen Hwang, Geunseok Park, Byeongyeon Kim, Hyesook Lee, Ha-Myung Park, Kijung Shin<br>
+                (to appear)
+                <!--<a href="/assets/papers/ICDE24_cekim.pdf" class="publication-link">[PDF]</a>-->
+            </div>
+        </div>
+    </div>
+    <div class="publications-per-year">
+        <div class="year-mark">
             2024
         </div>
         <div class="publications">
