커밋요정 다녀감

--- a/publications.html
+++ b/publications.html
@@ -16,8 +16,7 @@ background: '/img/bg-contact.jpg'
                 <b>SkySearch: Satellite Video Search at Scale</b><br>
                 ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)<br>
                 Minyoung Choe, Geon Lee, Changhun Han, Suji Kim, Woong Hu, Hyebeen Hwang, Geunseok Park, Byeongyeon Kim, Hyesook Lee, Ha-Myung Park, Kijung Shin<br>
-                (to appear)
-                <!--<a href="/assets/papers/ICDE24_cekim.pdf" class="publication-link">[PDF]</a>-->
+                <a href="https://dl.acm.org/doi/pdf/10.1145/3711896.3737263" class="publication-link">[PDF]</a>
             </div>
         </div>
     </div>
